add github star button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <script src="js/custom.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="gpa-calculator.js"></script>
+
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <body ng-app="gpa-calculator">
@@ -201,7 +203,9 @@
               <h4> {{ calc.gpa }} </h4>
             </div>
           </div>
-
+          <a class="github-button" href="https://github.com/hazemsamir/csed-gpa" data-icon="octicon-star" data-style="mega"
+          data-count-href="/ntkme/github-buttons/stargazers" data-count-api="/repos/hazemsamir/csed-gpa#stargazers_count"
+          data-count-aria-label="# stargazers on GitHub" aria-label="Star csed-gpa calculator on GitHub">Star</a>
         </div>
 
       </div>
