--- a/index.html
+++ b/index.html
@@ -56,11 +56,15 @@
           <div class="panel-group" id="accordion">
 
             <div class="panel panel-default">
-              <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#settings">
+              <div class="panel-heading">
                 <h4 class="panel-title">
                   <span class="fa fa-cog"></span>
-                  <a>GPA Settings</a>
+                  <a data-toggle="collapse" data-parent="#accordion" href="#settings">GPA Settings</a>
                 </h4>
+                <div class="btn-group pull-right">
+                  <button type="button" ng-click="calc.initializeGrades(); calc.calculateGPA()" class="btn btn-secondary btn-sm">Reset</button>
+                </div>
+                <div class="clearfix"></div>
               </div>
               <div id="settings" class="panel-collapse collapse">
                 <div class="panel-body">
@@ -71,7 +75,7 @@
                         <a href="http://egyptscholars.org/study-abroad-guide/">Study Abroad Guide</a> section#4 and their <a href="https://youtu.be/2KvOnWH-Scs?t=10m37s"> video </a>. You can adjust the points according to your needs.
                       </p>
                     </div>
-      
+
                     <form class="form-horizontal">
                       <fieldset>
                         <div class="form-group">
@@ -97,10 +101,16 @@
                     Total GPA
                   </a>
                 </h4>
+                <div class="btn-group pull-right">
+                  <button type="button" ng-click="calc.initializeYears(); calc.calculateGPA()" class="btn btn-secondary btn-sm">Reset</button>
+                </div>
+                <div class="clearfix"></div>
               </div>
-              <div class="panel-body"> <h4>{{ calc.gpa | number}} </h4> </div>
+              <div class="panel-body">
+                <h4>{{ calc.gpa | number}} </h4>
+              </div>
             </div>
-            
+
             <div class="panel panel-success" ng-repeat-start="year in calc.years" >
               <div class="panel-heading">
                 <div class="panel-title">
@@ -108,7 +118,7 @@
                       {{ calc.getYearName($index) }} Year - 1st Semester
                   </a>
                   <label class="switch pull-right">
-                    <input type="checkbox" ng-click="year[0].enabled=!year[0].enabled; calc.calculateGPA()">
+                    <input type="checkbox" ng-model="year[0].enabled" ng-click="calc.calculateGPA()">
                     <span class="slider round"></span>
                   </label>
                 </div>
@@ -148,7 +158,7 @@
                         {{ calc.getYearName($index) }} Year - 2nd Semester
                     </a>
                     <label class="switch pull-right">
-                      <input type="checkbox"  ng-click="year[1].enabled=!year[1].enabled; calc.calculateGPA()">
+                      <input type="checkbox"  ng-model="year[1].enabled" ng-click="calc.calculateGPA()">
                       <span class="slider round"></span>
                     </label>
                   </div>
